modified game.js for testing

--- a/game.html
+++ b/game.html
@@ -14,10 +14,18 @@
             <div id="hud">
                 <div class="hud-item">
                     <p class="hud-prefix">
-                        Timer
+                        Score
                     </p>
                     <h1 class="hud-main-text" id="score">
-                        90
+                        0
+                    </dh1>
+                </div>
+                <div class="hud-item">
+                    <p class="hud-prefix">
+                        Timer
+                    </p>
+                    <h1 class="hud-main-text" id="timer">
+                        60
                     </dh1>
                 </div>
             </div>
