created end and highscore html and js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="home" class="flex-column flex-center">
             <h1 class=play-title>Press Play!</h1>
             <a href="game.html" id="play-btn" class="btn play-title">Play</a>
-            <a href="/highscores.html" id="highscore-btn" class="btn play-title">High Scores<i class="fas fa-crown"></i></a>
+            <a href="highscore.html" id="highscore-btn" class="btn play-title">High Scores<i class="fas fa-crown"></i></a>
         </div>
     </div>
 </body>
