--- a/highscore.html
+++ b/highscore.html
@@ -12,6 +12,7 @@
 	<div class="container">
 			<div id="highScores" class="flex-center flex-column">
 					<h1 id="finalScore">Highscores</h1>
+					<!-- Will list the name and score as new elements once submitted -->
 					<ul id="highScoresList"></ul>
 					<a href="index.html" class="btn">Back to Home</a>
 			</div>
