--- a/end.html
+++ b/end.html
@@ -16,7 +16,7 @@
 							<h2 id="end-text">Enter and save your name!</h2>
 							<input type="text" name="name" id="username" placeholder="Enter your name">
 							<!-- the onclick event triggers only after the player inputs their name for both name and score to be stored to be retrieved later -->
-							<button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>Submit</button>
+							<button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighscore(event)" disabled>Submit</button>
 					</form>
 					<a href="game.html" class="btn">Play Again</a>
 					<a href="index.html" class="btn">Back to Home</a>
