--- a/highscore.html
+++ b/highscore.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Highscore</title>
 	<link rel="stylesheet" href="assets/css/style.css">
-<link rel="stylesheet" href="assets/css/game.css">
+	<link rel="stylesheet" href="assets/css/game.css">
+	<link rel="stylesheet" href="assets/css/highscore.css">
 </head>
 <body>
 	<div class="container">
